# home-library-lib

./: .env  .gitignore  Caddyfile  Cargo.toml  README.md  Rocket.toml  TODO.md  books.txt  develop.sh  docker-compose.yml  plan.md
backend/: .gitignore  Cargo.toml  Dockerfile  develop.sh
backend/db/: db.sqlite  db.sqlite-journal  db.sqlite-shm  db.sqlite-wal
backend/migrations/: 0001_initial_tables.sql  0002_sessions.sql  0003_searching.sql
backend/src/: apis.rs  auth.rs  database.rs  lib.rs  main.rs  routes.rs  types.rs
backend/src/database/: crud.rs  mod.rs  search.rs
data/: books.txt  borrows.txt  library.txt  template.txt  tree.txt
db/: db.sqlite  db.sqlite-shm  db.sqlite-wal
frontend/: .dockerignore  Cargo.toml  Dockerfile  README.md  develop.sh  package-lock.json  package.json  search_param.py  tailwind.config.ts
frontend-old/: Cargo.toml  Trunk.toml
frontend/src/: app.css  main.rs
frontend/src/lib/: utils-server.ts  utils.ts
frontend/src/lib/assets/: rose_icon.svelte
frontend/src/lib/components/: AddButtonWithDropdown.svelte  AppContent.svelte  AppHeader.svelte  AppSidebar.svelte  ArrayFormElement.svelte  BookCard.svelte  BookingButton.svelte  DarkModeToggle.svelte  DropdownSelector.svelte  ImageInput.svelte  IsbnDialog.svelte  LoginForm.svelte  PhysicalBookManagerButton.svelte  QuickActionMenu.svelte  QuickItemAddButton.svelte  RegisterForm.svelte  ReservationCalendar.svelte  SearchBar.svelte  Searchbar.svelte  ShelfSelector.svelte  SidebarToggleButton.svelte
frontend/src/lib/components/book-form/: book-form-schema.ts  book-form.svelte
frontend/src/lib/components/custom-range-calendar/base/: range-calendar.svelte.d.ts  range-calendar.svelte.js  types.d.ts
frontend/src/lib/components/custom-range-calendar/calendar/: calendar.svelte.d.ts  calendar.svelte.js  types.d.ts
frontend/src/lib/components/custom-range-calendar/wrapper/: index.ts  range-calendar.svelte  (+10 more)
frontend/src/lib/components/custom-sidebar/: context.svelte.ts
frontend/src/lib/components/sidebar/: app-sidebar.svelte  nav-main.svelte  search-form.svelte  site-header.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/(auth)/: LoginRegisterForm.svelte  user-credentials-schema.ts
frontend/src/routes/(auth)/login/: +page.server.ts  +page.svelte
frontend/src/routes/(auth)/register/: +page.server.ts  +page.svelte
frontend/src/routes/(site)/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  AddBookDrawer.svelte  AppContent.svelte  AppHeader.svelte
frontend/src/routes/(site)/add/: +page.server.ts  +page.svelte  book-form-schema.ts  book-form.svelte
frontend/src/routes/(site)/calendar/: +page.svelte
frontend/src/routes/(site)/help/: +page.svelte
frontend/src/routes/(site)/profile/: +page.server.ts  +page.svelte
frontend/src/routes/(site)/scan/: +page.svelte  +page.ts
frontend/src/routes/(site)/shelves/: +page.ts
frontend/src/routes/add/: +page.server.ts  +page.svelte  book-form-schema.ts  book-form.svelte
frontend/src/routes/api/change-personal-color/: +server.ts
frontend/src/routes/api/change-username/: +server.ts
frontend/src/routes/api/get-book-cover/: +server.ts
frontend/src/routes/api/get-search-suggestions/: +server.ts
frontend/src/routes/api/logout/: +server.ts
frontend/src/routes/api/remove-reservation/: +server.ts
frontend/src/routes/api/scan/: +server.ts
frontend/src/routes/book/[isbn]/: +page.svelte  +page.ts  BookInfoDesktop.svelte  BookInfoMobile.svelte
frontend/src/routes/scan/: +page.svelte  +page.ts
frontend/src/routes/shelves/: +page.svelte
migrations/: 0001_initial_tables.sql  0002_genre_table.sql  20250305220352_books_table.sql  20250307221348_initial_tables.sql
src/: apis.rs  args.rs  book.rs  database.rs  db.rs  err.rs  main.rs  searching.rs  storing.rs
src/apis/: google_books.rs
src/searching/: comparator.rs  fuzzy.rs
src/storing/: binary.rs  bk.rs  book.rs  data.rs  library.rs  read.rs  serialize.rs  user.rs
(+34 files in other folders)
