[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "native-tls-vendored"] }
json = "0.12.4"
serde_json = "1.0.139"
serde = "1.0.218"
actix-web = "4"
dotenv = "0.15.0"
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-session = { version = "0.10.1", features = ["cookie-session"]}
image = "0.25.6"
time = { version = "0.3.41", features = ["serde"]}
rand = "0.9.1"
sha2 = "0.10.9"
argon2 = "0.5.3"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["macros", "migrate", "runtime-tokio", "tls-native-tls", "sqlite", "time"]
